<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.fragment.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/top_artist_profile_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="25dp"
            app:shapeAppearanceOverlay="@style/rounded_top_artist_image"
            android:src="@drawable/test_img"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/create_art_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/poppins_extra_bold"
            android:text="@string/create_incredible_art"
            android:textSize="@dimen/text_headings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/join_others_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/join_others"
            android:textColor="@color/gray"
            android:textSize="@dimen/sub_headings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_art_txt" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/top_artists_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/join_others_txt" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/top_art_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_artists_recyclerview" />

        <Button
            android:id="@+id/create_new_art_button"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/light_yellow"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/create_art"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:cornerRadius="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_art_recyclerview" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>